e2e-tests/tests/snapshots/postgres__composite_14_14692_7645.snap
---
source: e2e-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: table_source
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(3538,821)
    properties:
      gid = 19 (uint)
  feature: 1
    id: (none)
    geometry: POINT(3348,940)
    properties:
      gid = 20 (uint)
  feature: 2
    id: (none)
    geometry: POINT(3524,927)
    properties:
      gid = 21 (uint)
  feature: 3
    id: (none)
    geometry: POINT(3548,1023)
    properties:
      gid = 22 (uint)
  feature: 4
    id: (none)
    geometry: POINT(3467,846)
    properties:
      gid = 23 (uint)
  feature: 5
    id: (none)
    geometry: POINT(3462,889)
    properties:
      gid = 24 (uint)
  feature: 6
    id: (none)
    geometry: POINT(3444,1001)
    properties:
      gid = 25 (uint)
  feature: 7
    id: (none)
    geometry: POINT(3360,903)
    properties:
      gid = 26 (uint)
  feature: 8
    id: (none)
    geometry: POINT(3369,816)
    properties:
      gid = 27 (uint)
  feature: 9
    id: (none)
    geometry: POINT(3551,770)
    properties:
      gid = 28 (uint)
=============================================================
layer: 1
  name: points1
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(3382,851)
    properties:
      gid = 3 (uint)
  feature: 1
    id: (none)
    geometry: POINT(3482,854)
    properties:
      gid = 2 (uint)
  feature: 2
    id: (none)
    geometry: POINT(3573,974)
    properties:
      gid = 1 (uint)
=============================================================
layer: 2
  name: points2
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(3510,808)
    properties:
      gid = 3 (uint)
  feature: 1
    id: (none)
    geometry: POINT(3396,814)
    properties:
      gid = 1 (uint)
  feature: 2
    id: (none)
    geometry: POINT(3472,1001)
    properties:
      gid = 2 (uint)
