e2e-tests/tests/snapshots/postgres__composite_17_117542_61161.snap
---
source: e2e-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: table_source
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(3726,2469)
    properties:
      gid = 19 (uint)
  feature: 1
    id: (none)
    geometry: POINT(2209,3422)
    properties:
      gid = 20 (uint)
  feature: 2
    id: (none)
    geometry: POINT(3612,3321)
    properties:
      gid = 21 (uint)
  feature: 3
    id: (none)
    geometry: POINT(3808,4088)
    properties:
      gid = 22 (uint)
  feature: 4
    id: (none)
    geometry: POINT(3159,2671)
    properties:
      gid = 23 (uint)
  feature: 5
    id: (none)
    geometry: POINT(3124,3012)
    properties:
      gid = 24 (uint)
  feature: 6
    id: (none)
    geometry: POINT(2976,3912)
    properties:
      gid = 25 (uint)
  feature: 7
    id: (none)
    geometry: POINT(2305,3130)
    properties:
      gid = 26 (uint)
  feature: 8
    id: (none)
    geometry: POINT(2379,2434)
    properties:
      gid = 27 (uint)
  feature: 9
    id: (none)
    geometry: POINT(3833,2061)
    properties:
      gid = 28 (uint)
=============================================================
layer: 1
  name: points1
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(2477,2716)
    properties:
      gid = 3 (uint)
  feature: 1
    id: (none)
    geometry: POINT(3279,2736)
    properties:
      gid = 2 (uint)
  feature: 2
    id: (none)
    geometry: POINT(4009,3694)
    properties:
      gid = 1 (uint)
=============================================================
layer: 2
  name: points2
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(3500,2364)
    properties:
      gid = 3 (uint)
  feature: 1
    id: (none)
    geometry: POINT(2594,2413)
    properties:
      gid = 1 (uint)
  feature: 2
    id: (none)
    geometry: POINT(3202,3915)
    properties:
      gid = 2 (uint)
